[build-system]
# cython dan numpy wajib ada saat pip membangun C extensions dari source.
# Jika tidak tersedia, setup.py otomatis skip build dan fallback ke pure NumPy.
requires = ["setuptools>=61.0", "wheel", "cython>=0.29.0", "numpy>=1.21.0"]
build-backend = "setuptools.build_meta"

[project]
name = "entrap"
version = "1.0.0"
authors = [
    { name = "Muhammad Akmal Husain" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "hdbscan>=0.8.27",
    "ripser>=0.6.0",
    "kneed>=0.8.0",
    "joblib>=1.1.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
# Diperlukan saat build dari source (pip install entrap[build]).
# Tidak diperlukan ketika menginstall dari pre-compiled wheel.
build = ["cython>=0.29.0"]

[tool.setuptools.packages.find]
where   = ["."]
include = ["entrap*"]

[tool.setuptools.package-data]
entrap = [
    "_c_src/*.h",
    "_c_src/*.c",
    "_numba_core.pyx",
    "_intrinsic_dim.pyx",
]
